--- a/public/assets/scss/sections/_navbar.scss
+++ b/public/assets/scss/sections/_navbar.scss
@@ -66,7 +66,13 @@
   margin-top: 20px;
   .nav-container {
     transition: all 0.4s;
-    position: relative;
+    //position: relative;
+    ///////////////////////
+    position: fixed;
+    top: 0;
+    margin-left: 35px;
+    margin-top: 25px;
+ 
     &.navbar-bg {
       position: relative;
       padding-left: 40px;
